--- a/main.css
+++ b/main.css
@@ -76,7 +76,7 @@ padding: 0px 80px;
     padding: 8px;
 }
 
-.moedas {
+.moedas, .moedasPara {
     width: 100%;
     margin-bottom: 8px;
     height: 40px;
