--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-padding: 0px 80px;
+padding: 18px 80px;
 }
 
 .container {
@@ -13,6 +13,7 @@ padding: 0px 80px;
     display: flex;
     justify-content: space-between;
     width: 100%;
+    margin-top: 8px;
 }
 
 .valorInicio h3,
@@ -23,6 +24,23 @@ padding: 0px 80px;
     padding: 0px;
 }
 
+.valorFinal {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.valorFinal > .btn {
+    margin-top: auto;
+}
+
+.btn > button{
+    border-radius: 30px;
+    border: 0.5px solid rgb(168, 168, 168);
+    height: 40px;
+    width: 120px;
+    cursor: pointer;
+}
 
 
 .valorInformado{
@@ -57,6 +75,7 @@ padding: 0px 80px;
     justify-content: center;
     align-items: center;
     font-size: 80px;
+    outline: none; /* Remove a borda azul padrão ao focar */
 }
 
 .valorFinalConvetido {
@@ -76,10 +95,68 @@ padding: 0px 80px;
     padding: 8px;
 }
 
+.btn {
+    display: flex;
+    align-items: end;
+}
+
+.btnLogin > button {
+    height: 60px;
+    width: 160px;
+    border-radius: 40px;
+    border: 0px;
+    margin-right: 80px;
+    font-size: 16px;
+}
+
 .moedas, .moedasPara {
     width: 100%;
     margin-bottom: 8px;
     height: 40px;
+}
+
+.custom-select {
+    position: relative;
+    width: 100%;
+    border-radius: 4px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.span {
+    margin-right: 100px;
+}
+
+.selected-option,.selected-option-para {
+    display: flex;
+    padding: 10px;
+    font-size: 16px;
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.options-container {
+    display: none; 
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    border: 1px solid #ccc;
+    border-top: none;
+    z-index: 10;
+    width: 100%;
+}
+
+.option {
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.custom-select.open .options-container {
+    display: block;
 }
 
 .valorDigitar {
@@ -107,4 +184,13 @@ padding: 0px 80px;
 
 input {
     border: 0px;
+}
+
+.input:active {
+    border: 0px;
+}
+
+h1 {
+    padding: 0;
+    margin: 0;
 }
